--- a/wwwroot/css/chessboard.css
+++ b/wwwroot/css/chessboard.css
@@ -6,9 +6,6 @@
   }
   
   .grid-item {
-    background-color: rgba(255, 255, 255, 0.3);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    font-size: 30px;
-    color : rgba(0, 0, 0, 1);
-    text-align: center;
+    background-color: rgba(255, 255, 255, 0);
+    color: slateblue;
   }
