--- a/wwwroot/css/chessboard.css
+++ b/wwwroot/css/chessboard.css
@@ -8,5 +8,12 @@
   .grid-item {
     background-color: rgba(255, 255, 255, 0);
     background-image: none;
-    color: slateblue;
   }
+  #picked-piece{
+    background-image: url("Pieces/WhitePawn.png");
+    border-style: dotted;
+    position: absolute;
+    height: 128px;
+    width: 128px;
+  }
+  
