runtime created Board

--- a/Views/Arena/Index.cshtml
+++ b/Views/Arena/Index.cshtml
@@ -8,77 +8,7 @@
 <body>
   <button onclick="SetupBoard()">SetupBoard</button>
   <div class="grid-container">
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div> 
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
-  <div class="grid-item" ondragstart="DragStart(event)"ondragend="DragEnd(event)" draggable="false"ondrop="Drop(event)" ondrag="AllowDrop(event)"></div>
+  <div class="grid-item" draggable="false" onmousedown="SelectPiece(event)" ondrag="Drag(event)" ondragstart="DragStart(event)"ondragend="Drop(event)"></div>
 </div>
 <div id="picked-piece" ></div>
 </body>
