--- a/wwwroot/css/chessboard.css
+++ b/wwwroot/css/chessboard.css
@@ -6,12 +6,14 @@
   }
   
   .grid-item {
+    display: flex;
     background-color: rgba(255, 255, 255, 0);
     background-image: none;
   }
   #picked-piece{
-    background-image: url("Pieces/WhitePawn.png");
-    border-style: dotted;
+    display: flex;
+    background-image: none;
+    border-style: dashed;
     position: absolute;
     height: 128px;
     width: 128px;
