fixed dragging by replacing events with onmouse events

--- a/Views/Arena/Index.cshtml
+++ b/Views/Arena/Index.cshtml
@@ -8,7 +8,8 @@
 <body>
   <button onclick="SetupBoard()">SetupBoard</button>
   <div class="grid-container">
-  <div class="grid-item" draggable="false" ondrag="Drag(event)" ondragstart="DragStart(event)" ondragend="DragEnd(event)"></div>
+  <div class="grid-item" onmousedown="DragStart(event)"></div>
+  @*(i add 63 more grid-item elements in js)*@
 </div>
 <div id="picked-piece" ></div>
 </body>
