SendMove now works

--- a/Views/Arena/Index.cshtml
+++ b/Views/Arena/Index.cshtml
@@ -2,8 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/chessboard.css">
-  <script type="text/javascript" src="js/chessboard.js"></script>
+  <script type="text/javascript" src="js/ChessBoard.js"></script>
   <script type="text/javascript" src="js/MovePieces.js"></script>
+  <script type="text/javascript" src="js/API.js"></script>
 </head>
 <body>
   <button onclick="SetupBoard()">SetupBoard</button>
