--- a/wwwroot/css/chessboard.css
+++ b/wwwroot/css/chessboard.css
@@ -7,7 +7,7 @@
   
   .grid-item {
     display: flex;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: transparent;
     background-image: none;
   }
   #picked-piece{
