pawn promotion completed

--- a/Views/Arena/Index.cshtml
+++ b/Views/Arena/Index.cshtml
@@ -13,5 +13,20 @@
   @*(i add 63 more grid-item elements in js)*@
 </div>
 <div id="picked-piece" ></div>
+
 </body>
+<div id="PromotionModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p style="font-size:60px; text-align:center;">Promote to?</p>
+    <img src="/Pieces/wR.png" onclick="ModaiSelectPiece(this)">
+    <img src="/Pieces/wQ.png"onclick="ModaiSelectPiece(this)">
+    <img src="/Pieces/wN.png"onclick="ModaiSelectPiece(this)">
+    <img src="/Pieces/wB.png"onclick="ModaiSelectPiece(this)">
+  </div>
+
+</div>
+
 </html>
