--- a/wwwroot/css/chessboard.css
+++ b/wwwroot/css/chessboard.css
@@ -1,11 +1,14 @@
-.grid-container {
-    display: inline-grid;
-    grid-template-columns: 128px 128px 128px 128px 128px 128px 128px 128px;
-    grid-template-rows: 128px 128px 128px 128px 128px 128px 128px 128px;
-    background-image: url("blue-marble.jpg");
+.board{
+  grid-template-columns: 128px 128px 128px 128px 128px 128px 128px 128px;
+  grid-template-rows: 128px 128px 128px 128px 128px 128px 128px 128px;
+  background-image: url("maple2.jpg");
+  display: inline-grid;
+  border-width: 70px;
+  border-style: solid;
+  border-image: url("dark-wood-grain-texture.jpg") 99;
   }
   
-  .grid-item {
+  .square {
     display: flex;
     background-color: transparent;
     background-image: none;
@@ -17,40 +20,3 @@
     height: 128px;
     width: 128px;
   }
-  .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(181, 183, 190); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: white;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 512px; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
