--- a/Views/Arena/Index.cshtml
+++ b/Views/Arena/Index.cshtml
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </head>
-<body  onload="SetupBoard()">
+<body onload="LoadGame()">
   <nav class="navbar navbar-light container-fluid" style="background-color: #F6E1CA; display: -webkit-inline-box;">
     <div style="display: contents">
       <img style= "width: 72px; height: 72px"src="/Pieces/bK.png">
