--- a/wwwroot/css/chessboard.css
+++ b/wwwroot/css/chessboard.css
@@ -1,9 +1,10 @@
 .board{
-  grid-template-columns: 128px 128px 128px 128px 128px 128px 128px 128px;
-  grid-template-rows: 128px 128px 128px 128px 128px 128px 128px 128px;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px;
   background-image: url("maple2.jpg");
+  background-size: 800px 800px;
   display: inline-grid;
-  border-width: 70px;
+  border-width: 50px;
   border-style: solid;
   border-image: url("dark-wood-grain-texture.jpg") 99;
   }
@@ -12,11 +13,13 @@
     display: flex;
     background-color: transparent;
     background-image: none;
+    background-size: 100px 100px;
   }
   #picked-piece{
     display: flex;
     background-image: none;
     position: absolute;
-    height: 128px;
-    width: 128px;
+    background-size: 100px 100px;
+    height: 100px;
+    width: 100px;
   }
