all bugs fixed. computer cant castle or promote but im going to stop here

--- a/Views/Arena/Index.cshtml
+++ b/Views/Arena/Index.cshtml
@@ -40,11 +40,11 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p style="font-size:60px; text-align:center;">Promote to?</p>
-    <img src="/Pieces/wR.png" onclick="ModaiSelectPiece(this)">
-    <img src="/Pieces/wQ.png"onclick="ModaiSelectPiece(this)">
-    <img src="/Pieces/wN.png"onclick="ModaiSelectPiece(this)">
-    <img src="/Pieces/wB.png"onclick="ModaiSelectPiece(this)">
+    <h1 style="text-align:center;">Promote to?</p>
+    <img style="width: 64px; height: 64px;" src="/Pieces/wR.png" onclick="ModaiSelectPiece(this)">
+    <img style="width: 64px; height: 64px;" src="/Pieces/wQ.png"onclick="ModaiSelectPiece(this)">
+    <img style="width: 64px; height: 64px;" src="/Pieces/wN.png"onclick="ModaiSelectPiece(this)">
+    <img style="width: 64px; height: 64px;" src="/Pieces/wB.png"onclick="ModaiSelectPiece(this)">
   </div>
 
 </div>
